# fastAPI

./: .gitignore  TODO  admin.py  celery_config.py  config.py  db.py  log.txt  main.py  models.py  pyproject.toml
apps/: admin.py
apps/models/: __init__.py  database.py  db.py  products.py  users.py
apps/routers/: generate.py  products.py  tasks.py
models/: products.py
templates/: user-detail.html  user-list.html
templates/apps/auth/: login.html
templates/apps/products/: product-detail.html  product-list.html
utils/: admin.py
