[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Safaraliyev05 <uzblordsardorboy0705@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.22"
sqladmin = "^0.19.0"
psycopg2-binary = "^2.9.9"
fastapi-storages = "^0.3.0"
sqlalchemy-file = "^0.6.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
